# pip-milkdrop

./: Cargo.toml  build.rs  opencode.json  shim.cpp
src/: audio.rs  config.rs  controller.rs  ffi.rs  gallery.rs  main.rs  media.rs  menubar.rs  visualizer.rs
