[package]
name = "pip-milkdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.38"
gl = "0.14"
cpal = "0.17"
crossbeam-channel = "0.5"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
block2 = "0.6"
dispatch2 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
